<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ticketRegisterFragment"
        android:icon="@drawable/confirmation_number"
        android:title="@string/item_menu_register" />

    <item
        android:id="@+id/registeredUsersFragment"
        android:icon="@drawable/cinematic_blur"
        android:title="@string/item_menu_users" />

</menu>