<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="kotlin.Unit" />

        <import type="kotlin.jvm.functions.Function1" />

        <import type="java.util.List" />

        <variable
            name="clickAction"
            type="Function1&lt;Integer, Unit>" />

        <variable
            name="hint"
            type="String" />

        <variable
            name="items"
            type="List&lt;String>" />

        <variable
            name="text"
            type="String" />

    </data>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@{hint}">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/act_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@={text}"
            app:adapter="@{items}"
            app:listener="@{clickAction}" />

    </com.google.android.material.textfield.TextInputLayout>

</layout>